--- a/block.config.json
+++ b/block.config.json
@@ -3,8 +3,8 @@
   "type": "package",
   "blockId": "iHv3pqxRSf5XJCmBJrTLd",
   "source": {
-    "https": null,
-    "ssh": null,
+    "https": "https://github.com/uttahb/internaldemo1.git",
+    "ssh": "git@github.com:uttahb/internaldemo1.git",
     "branch": "block_internaldemo1"
   },
   "parentBlockIDs": [],
