--- a/internaldemo_pack1/internaldemo_pack_pack/block.config.json
+++ b/internaldemo_pack1/internaldemo_pack_pack/block.config.json
@@ -3,8 +3,8 @@
   "name": "internaldemo_pack_pack",
   "type": "package",
   "source": {
-    "https": null,
-    "ssh": null,
+    "https": "https://github.com/uttahb/internaldemo1.git",
+    "ssh": "git@github.com:uttahb/internaldemo1.git",
     "branch": "block_internaldemo_pack_pack"
   },
   "parentBlockIDs": [
