--- a/block.config.json
+++ b/block.config.json
@@ -17,5 +17,7 @@
     "1.0.0"
   ],
   "isPublic": true,
-  "start": "node index.js"
+  "start": "node index.js",
+  "version": "0.0.1",
+  "versionId": "L7nyUQx1yFNjnaCgrLcnR"
 }
