--- a/block.config.json
+++ b/block.config.json
@@ -18,5 +18,7 @@
     "1.0.0"
   ],
   "isPublic": true,
-  "start": "node index.js"
+  "start": "node index.js",
+  "version": "0.0.1",
+  "versionId": "CgwIV1n3yzub9p5ZK96vO"
 }
