--- a/block.config.json
+++ b/block.config.json
@@ -18,7 +18,11 @@
   "isPublic": true,
   "dependencies": {
     "internaldemo_pack_pakc_fn": {
-      "directory": "internaldemo_pack_pakc_fn"
+      "directory": "internaldemo_pack_pakc_fn",
+      "versionId": "CgwIV1n3yzub9p5ZK96vO",
+      "version": "0.0.1"
     }
-  }
+  },
+  "version": "0.0.1",
+  "versionId": "q18Nc-nJyoVPi1EG4ua5Y"
 }
